--- a/my-app/app.json
+++ b/my-app/app.json
@@ -1,15 +1,17 @@
 {
   "expo": {
-    "name": "my-app",
+    "name": "bokgungom-market",
     "slug": "my-app",
     "version": "1.0.0",
+    "githubUrl": "https://github.com/nailedReact/bokgungom-market",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "primaryColor": "#4583a3",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "cover",
+      "backgroundColor": "#4583a3"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -21,8 +23,12 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#4583a3"
+      },
+      "package": "com.nailedReact.bokgungommarket"
+    },
+    "androidNavigationBar": {
+      "backgroundColor": "#4583a3"
     },
     "web": {
       "favicon": "./assets/favicon.png"
